# SolarSimulator

./: .gitignore  Build.bat  CMakeLists.txt  README.md
Excutable/: Install.bat  Log.txt
Excutable/Resources/Models/: Sphere.glb
Excutable/Resources/Shaders/: Blur.glsl  Earth.glsl  Grid.glsl  basic.glsl
Excutable/Resources/UI/: UI.json
SolarSimulator/Resources/Models/: Earth.glb  Earth.gltf  Jupiter.glb  Jupiter.gltf  Mars.glb  Mars.gltf  Mercury.glb  Mercury.gltf  Neptone.glb  Neptone.gltf  Ring.glb  Saturn.glb  Saturn.gltf  SaturnRing.glb  SaturnRing.gltf  Sphere.gltf  Sun.glb  Sun.gltf  Uranus.glb  Uranus.gltf  Venus.glb  Venus.gltf
SolarSimulator/Resources/Shaders/: Bloom.glsl  Earth.glsl  Grid.glsl  Screen.glsl  Sun.glsl  basic.glsl
SolarSimulator/Resources/UI/: UI.json
SolarSimulator/Source/: Core.h  main.cpp
SolarSimulator/Source/Application/: Application.cpp  Application.h
SolarSimulator/Source/Camera/: Camera.cpp  Camera.h
SolarSimulator/Source/Entity/: Entity.cpp  Entity.h  Grid.cpp  Grid.h  SkyBox.cpp  SkyBox.h
SolarSimulator/Source/Entity/Celestial/: Earth.cpp  Earth.h  Jupiter.cpp  Jupiter.h  Mars.cpp  Mars.h  Mercury.cpp  Mercury.h  Neptone.cpp  Neptone.h  Saturn.cpp  Saturn.h  Sun.cpp  Sun.h  Uranus.cpp  Uranus.h  Venus.cpp  Venus.h
SolarSimulator/Source/LogSys/: Log.cpp  Log.h
SolarSimulator/Source/Mesh/: ElementBuffer.cpp  ElementBuffer.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h
SolarSimulator/Source/Physics/: Physics.cpp  Physics.h  Properties.h
SolarSimulator/Source/Renderer/: FrameBuffer.cpp  FrameBuffer.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  ShaderManager.cpp  ShaderManager.h  Texture.cpp  Texture.h
SolarSimulator/Source/Timer/: Timer.cpp  Timer.h
SolarSimulator/Source/UI/: Button.h  Checkbox.h  Element.h  Input3F.h  InputField.h  Slider.h  Text.h  UI.cpp  UI.h  UIWindow.cpp  UIWindow.h
SolarSimulator/Source/Window/: Window.cpp  Window.h
